--- a/templates/customer/edit_customer.html
+++ b/templates/customer/edit_customer.html
@@ -93,7 +93,7 @@
                         <td>老板生日</td>
                         <td><label>
                             <input class="layui-input" type="date" name="boss_birthday"
-                                   value="{{ customer_info.boss_birthday|date:'yy-m-d' }}">
+                                   value="{{ customer_info.boss_birthday|date:'Y-m-d' }}">
                         </label></td>
                         <td>老板生肖</td>
                         <td><label>
@@ -110,7 +110,7 @@
                         <td><label>
                             <input class="layui-input" type="date" name="company_birthday"
                                    autocomplete="off"
-                                   value="{{ customer_info.company_birthday|date:'yy-m-d' }}">
+                                   value="{{ customer_info.company_birthday|date:'Y-m-d' }}">
                         </label></td>
                     </tr>
                     <tr>
