--- a/templates/saleman/edit_saleman.html
+++ b/templates/saleman/edit_saleman.html
@@ -87,7 +87,7 @@
             <th>
                 <label>
                     <input type="date" name="birthday" class="layui-input" style="width: 200px"
-                           value="{{ search_saleman.birthday|date:'yy-m-d' }}">
+                           value="{{ search_saleman.birthday|date:'Y-m-d' }}">
                 </label>
             </th>
         </tr>
@@ -98,7 +98,7 @@
             <th>
                 <label>
                     <input type="date" name="hiredate" class="layui-input" style="width: 200px"
-                           value="{{ search_saleman.hiredate|date:'yy-m-d' }}">
+                           value="{{ search_saleman.hiredate|date:'Y-m-d' }}">
                 </label>
             </th>
         </tr>
@@ -109,7 +109,7 @@
             <th>
                 <label>
                     <input type="date" name="resignation_time" class="layui-input" style="width: 200px"
-                           value="{{ search_saleman.resignation_time|date:'yy-m-d' }}">
+                           value="{{ search_saleman.resignation_time|date:'Y-m-d' }}">
                 </label>
             </th>
         </tr>
