--- a/templates/saleman/saleman_welcome.html
+++ b/templates/saleman/saleman_welcome.html
@@ -38,9 +38,9 @@
 
     <div class="layui-row layui-col-space15">
         <div class="layui-col-xs12 layui-col-md3">
-
             <div class="layui-card top-panel">
-                <div class="layui-card-header"><a href="">当月回款金额</a></div>
+                <div class="layui-card-header"><a href="/saleman_receivable_info/?saleman={{ saleman_name }}">当月回款金额</a>
+                </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space5">
                         <div class="layui-col-xs9 layui-col-md9 top-panel-number">
@@ -68,12 +68,11 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="layui-col-xs12 layui-col-md3">
-
             <div class="layui-card top-panel">
-                <div class="layui-card-header">当月销售额</div>
+                <div class="layui-card-header"><a href="/saleman_sale_money_info/">当月销售额</a>
+                </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space5">
                         <div class="layui-col-xs9 layui-col-md9 top-panel-number">
@@ -100,8 +99,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
+        </div>
         </div>
         <div class="layui-col-xs12 layui-col-md3">
 
@@ -137,7 +135,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="layui-col-xs12 layui-col-md3">
 
@@ -155,7 +152,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="layui-col-xs12 layui-col-md3">
 
@@ -173,7 +169,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -196,9 +191,6 @@
         </div>
     </div>
 
-    <div>
-        {{ test.html }}
-    </div>
 </div>
 <!--</div>-->
 <script src="../../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
