--- a/templates/cost.html
+++ b/templates/cost.html
@@ -6,19 +6,19 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="../../../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="../../../static/lib/layui-v2.5.5/css/layui.css" media="all">
+    <script src="../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="../static/lib/layui-v2.5.5/css/layui.css" media="all">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../../static/css/bootstrap-table-expandable.css">
-    <script src="../../../static/js/bootstrap-table-expandable.js"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap-table-expandable.css">
+    <script src="../static/js/bootstrap-table-expandable.js"></script>
 </head>
 <body>
-<form action="/saleman_receivable_info/" method="post">
+<form action="/cost/" method="post">
     <div class="demoTable">
-        开始时间
+        开始时间:
         <label class="layui-inline">
             <input type="date" name="start_time" class="layui-input" autocomplete="off">
         </label>
@@ -27,18 +27,71 @@
 
         &ensp;
         &ensp;
-        结束时间
+        结束时间:
         <label class="layui-inline">
             <input type="date" name="end_time" class="layui-input" autocomplete="off">
         </label>
+        &ensp;
+        &ensp;
+
+        &ensp;
+        类型:
+        <label class="layui-inline">
+            <input type="text" name="type" list="types" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="types" style="display:none; ">
+            {% for type in all_type %}
+                <option name='type'>{{ type.cost_type }}</option>
+            {% endfor %}
+        </datalist> &ensp;
+        &ensp;
+
+
+        区域:
+        <label class="layui-inline">
+            <input type="text" name="area" list="areas" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="areas" style="display:none; ">
+            {% for area in all_area %}
+                <option name='area'>{{ area.area }}</option>
+            {% endfor %}
+        </datalist>
+
+        &ensp;
+        &ensp;
+
+        &ensp;
+        客户名:
+        <label class="layui-inline">
+            <input type="text" name="customer" list="customers" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="customers" style="display:none; ">
+            {% for customer_name in all_customer_name %}
+                <option name='customer'>{{ customer_name.customer }}</option>
+            {% endfor %}
+        </datalist>
+        &ensp;
+        &ensp;
+
+        &ensp;
+
+        业务员:
+        <label class="layui-inline">
+            <input type="text" name="saleman" list="salemans" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="salemans" style="display:none; ">
+            {% for saleman in all_saleman_name %}
+                <option name='saleman'>{{ saleman.saleman }}</option>
+            {% endfor %}
+        </datalist> &ensp;
+
         <button type="submit" class="layui-btn layui-btn-primary" lay-submit><i
                 class="layui-icon"></i> 搜 索
         </button>
-        <label class="layui-inline">
-            <input type="text" name="saleman" class="layui-input" autocomplete="off" value="{{ aii_info.0.saleman }}"
-                   style="width: 150px;height: 40px;margin-left:650%">
-        </label>
-
     </div>
 </form>
 <div>
@@ -55,30 +108,26 @@
             , totalRow: true
             , cols: [[ //标题栏
                 {field: 'id', title: 'ID', maxWidth: 50, sort: true, totalRowText: '合计'}
-                , {field: 'date', title: '交易时间', minWidth: 150, sort: true}
-                , {field: 'bank', title: '交易行名', minWidth: 100}
-                , {field: 'banking_heads', title: '对方户名', minWidth: 250}
-                , {field: 'money', title: '收入金额', minWidth: 150, sort: true, totalRowText:{{sum_money}}}
-                , {field: 'customer', title: '客户公司名', width: 250, templet: addLink}
-                , {field: 'area', title: '区域', minWidth: 100}
-                , {field: 'remake', title: '备注', minWidth: 150}
-                , {field: 'earnest_money', title: '保证金额', minWidth: 150, sort: true}
-                , {field: 'push_money', title: '提成金额', minWidth: 150, sort: true,}
+                , {field: 'date', title: '日期', minWidth: 150, sort: true}
+                , {field: 'area', title: '地区', minWidth: 150}
+                , {field: 'saleman', title: '业务员', minWidth: 100, templet: saleman_link}
+                , {field: 'customer', title: '客户名', minWidth: 100, templet: addLink}
+                , {field: 'type', title: '类型', minWidth: 100,}
+                , {field: 'cost_money', title: '金额', minWidth: 100, totalRowText:{{ cost_sum}}}
+                , {field: 'remake', title: '备注', minWidth: 150, sort: true}
                 , {field: 'right', title: '操作', toolbar: '#saleman_tool', width: 150}
             ]],
             data: [
-                {% for foo in aii_info %}
+                {% for foo in all_cost_info %}
                     {
                         "id": "{{foo.id  }}"
-                        , "date": "{{foo.date |date:'Y-m-d h:m:s' |safe }}"
-                        , "bank": "{{foo.bank}}"
-                        , "banking_heads": "{{foo.banking_heads}}"
-                        , "money": "{{foo.money}}"
-                        , "customer": "{{ foo.customer }}"
+                        , "date": "{{foo.date |date:'Y-m-d ' |safe }}"
                         , "area": "{{ foo.area }}"
+                        , "saleman": "{{ foo.saleman }}"
+                        , "customer": "{{foo.customer}}"
+                        , "type": "{{foo.cost_type}}"
+                        , "cost_money": "{{ foo.cost_number }}"
                         , "remake": "{{ foo.remake }}"
-                        , "earnest_money": "{{ foo.earnest_money }}"
-                        , "push_money": "{{ foo.push_money }}"
                     },
                 {% endfor %}
             ],
@@ -91,7 +140,7 @@
             if (obj.event === 'delete') {
                 layer.confirm('真的删除行么', function (index) {
                     $.ajax({
-                        url: "/delete_receivable_info/",
+                        url: "/delete_cost_info/",
                         type: "POST",
                         data: {id: data.id},
                         success: function (msg) {
@@ -115,12 +164,12 @@
                 layer.open({
                     type: 2,
                     data: {id: data.id},
-                    title: '回款信息编辑',
+                    title: '费用信息编辑',
                     shadeClose: true,
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['80%', '80%'],
-                    content: '/edit_receivable_info/?id=' + data.id
+                    content: '/edit_cost_info/?id=' + data.id
                 });
             }
         });
@@ -134,6 +183,16 @@
         }
         if (addLink.length > 0) {
             return "<a class='layui-table-link' href='/customer_welcome/?customer_name=" + d.customer + "' lay-event='link'>" + d.customer + '</a>';
+        }
+    }
+
+    function saleman_link(d) {
+        var addLink = d.saleman;
+        if ('' === addLink || null == addLink) {
+            return '';
+        }
+        if (addLink.length > 0) {
+            return "<a class='layui-table-link' href='/saleman_welcome/?saleman_name=" + d.saleman + "' lay-event='link'>" + d.saleman + '</a>';
         }
     }
 </script>
