--- a/templates/customer/customer_info/customer_receivable_info.html
+++ b/templates/customer/customer_info/customer_receivable_info.html
@@ -16,7 +16,7 @@
     <script src="../../../static/js/bootstrap-table-expandable.js"></script>
 </head>
 <body>
-<form action="/saleman_receivable_info/" method="post">
+<form action="/customer_receivable_info/" method="post">
     <div class="demoTable">
         开始时间
         <label class="layui-inline">
@@ -57,13 +57,12 @@
                 {field: 'id', title: 'ID', maxWidth: 50, sort: true, totalRowText: '合计'}
                 , {field: 'date', title: '交易时间', minWidth: 150, sort: true}
                 , {field: 'bank', title: '交易行名', minWidth: 100}
-                , {field: 'banking_heads', title: '对方户名', minWidth: 250}
-                , {field: 'money', title: '收入金额', minWidth: 150, sort: true, totalRowText:{{sum_money}}}
-                , {field: 'customer', title: '客户公司名', width: 250, templet: addLink}
+                , {field: 'banking_heads', title: '户名', minWidth: 250}
+                , {field: 'money', title: '回款金额', minWidth: 150, sort: true, totalRowText: {{sum_money}}}
+                , {field: 'saleman', title: '业务员', width: 250, templet: addLink}
                 , {field: 'area', title: '区域', minWidth: 100}
-                , {field: 'remake', title: '备注', minWidth: 150}
                 , {field: 'earnest_money', title: '保证金额', minWidth: 150, sort: true}
-                , {field: 'push_money', title: '提成金额', minWidth: 150, sort: true,}
+                , {field: 'remake', title: '备注', minWidth: 150}
                 , {field: 'right', title: '操作', toolbar: '#saleman_tool', width: 150}
             ]],
             data: [
@@ -74,11 +73,10 @@
                         , "bank": "{{foo.bank}}"
                         , "banking_heads": "{{foo.banking_heads}}"
                         , "money": "{{foo.money}}"
-                        , "customer": "{{ foo.customer }}"
+                        , "saleman": "{{ foo.saleman }}"
                         , "area": "{{ foo.area }}"
                         , "remake": "{{ foo.remake }}"
                         , "earnest_money": "{{ foo.earnest_money }}"
-                        , "push_money": "{{ foo.push_money }}"
                     },
                 {% endfor %}
             ],
@@ -91,7 +89,7 @@
             if (obj.event === 'delete') {
                 layer.confirm('真的删除行么', function (index) {
                     $.ajax({
-                        url: "/delete_receivable_info/",
+                        url: "/delete_customer_receivable_info/",
                         type: "POST",
                         data: {id: data.id},
                         success: function (msg) {
@@ -120,7 +118,7 @@
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['80%', '80%'],
-                    content: '/edit_receivable_info/?id=' + data.id
+                    content: '/edit_customer_receivable_info/?id=' + data.id
                 });
             }
         });
@@ -128,12 +126,12 @@
 </script>
 <script>
     function addLink(d) {
-        var addLink = d.customer;
+        var addLink = d.saleman;
         if ('' === addLink || null == addLink) {
             return '';
         }
         if (addLink.length > 0) {
-            return "<a class='layui-table-link' href='/customer_welcome/?customer_name=" + d.customer + "' lay-event='link'>" + d.customer + '</a>';
+            return "<a class='layui-table-link' href='/saleman_welcome/?saleman_name=" + d.saleman + "' lay-event='link'>" + d.saleman + '</a>';
         }
     }
 </script>
