--- a/templates/customer/customer_welcome.html
+++ b/templates/customer/customer_welcome.html
@@ -6,9 +6,9 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../static/lib/layui-v2.5.5/css/layui.css" media="all">
-    <link rel="stylesheet" href="../static/lib/font-awesome-4.7.0/css/font-awesome.min.css" media="all">
-    <link rel="stylesheet" href="../static/css/public.css" media="all">
+    <link rel="stylesheet" href="../../static/lib/layui-v2.5.5/css/layui.css" media="all">
+    <link rel="stylesheet" href="../../static/lib/font-awesome-4.7.0/css/font-awesome.min.css" media="all">
+    <link rel="stylesheet" href="../../static/css/public.css" media="all">
     <style>
         .top-panel {
             border: 1px solid #eceff9;
@@ -39,7 +39,7 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-xs12 layui-col-md3">
             <div class="layui-card top-panel">
-                <div class="layui-card-header"><a href="/receivable_info/">当月回款金额</a>
+                <div class="layui-card-header"><a href="/customer_receivable_info">当月回款金额</a>
                 </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space5">
@@ -57,14 +57,13 @@
                             {% endif %}
                             <br>
                             比上上月
-
-                            {% if six_receivable_date.3 >= six_receivable_date.1 %}
-                                <a style="color: #1aa094">
+                            <a style="color: #1aa094">
+                                {% if six_receivable_date.3 >= six_receivable_date.1 %}
                                     ▲{{ before_two_month_receivable }}</a>
-                            {% else %}
-                                <a style="color: #bd3004">
-                                    ▼{{ before_two_month_receivable }}</a>
-                            {% endif %}
+                                {% else %}
+                                    <a style="color: #bd3004">
+                                        ▼{{ before_two_month_receivable }}</a>
+                                {% endif %}
                         </div>
                     </div>
                 </div>
@@ -72,7 +71,7 @@
         </div>
         <div class="layui-col-xs12 layui-col-md3">
             <div class="layui-card top-panel">
-                <div class="layui-card-header"><a href="/sale_money_info/">当月销售额</a>
+                <div class="layui-card-header"><a href="/customer_money_info/">当月销售额</a>
                 </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space5">
@@ -105,41 +104,7 @@
         <div class="layui-col-xs12 layui-col-md3">
 
             <div class="layui-card top-panel">
-                <div class="layui-card-header"><a href="/cost/">费用</a></div>
-                <div class="layui-card-body">
-                    <div class="layui-row layui-col-space5">
-                        <div class="layui-col-xs9 layui-col-md9 top-panel-number">
-                            {{ six_cost_date.3 }}
-                        </div>
-                        <div class="layui-col-xs3 layui-col-md3 top-panel-tips">
-                            比上月
-                            {% if six_cost_date.3 >= six_cost_date.2 %}
-                                <a style="color: #1aa094">
-                                    ▲{{ before_one_month_cost_number }} </a>
-                            {% else %}
-                                <a style="color: #bd3004">
-                                    ▼{{ before_one_month_cost_number }}</a>
-                            {% endif %}
-                            <br>
-                            比上上月
-
-                            {% if six_cost_date.3 >= six_cost_date.1 %}
-                                <a style="color: #1aa094">
-                                    ▲{{ before_two_month_cost_number }}</a>
-                            {% else %}
-                                <a style="color: #bd3004">
-                                    ▼{{ before_two_month_cost_number }}</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <div class="layui-col-xs12 layui-col-md3">
-
-            <div class="layui-card top-panel">
-                <div class="layui-card-header">当月新开客户</div>
+                <div class="layui-card-header">费用</div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space5">
                         <div class="layui-col-xs9 layui-col-md9 top-panel-number">
@@ -152,6 +117,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -176,8 +142,8 @@
 
 </div>
 <!--</div>-->
-<script src="../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-<script src="../static/js/lay-config.js?v=1.0.4" charset="utf-8"></script>
+<script src="../../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
+<script src="../../static/js/lay-config.js?v=1.0.4" charset="utf-8"></script>
 <script>
     layui.use(['layer', 'echarts'], function () {
         var $ = layui.jquery,
@@ -234,18 +200,10 @@
                     type: 'line',
                     stack: '总量',
                     areaStyle: {},
-                    data: {{ six_cost_date|safe }}
+                    data: [820, 932, 901, 20000, 1290, 1330, 1320]
                 },
                 {
                     name: '销售额',
-                    type: 'line',
-                    stack: '总量',
-                    areaStyle: {},
-                    data: {{ six_sale_money_date|safe }}
-                },
-
-                {
-                    name: '回款额',
                     type: 'line',
                     stack: '总量',
                     areaStyle: {},
@@ -255,6 +213,15 @@
                             position: 'top'
                         }
                     },
+                    data: {{ six_sale_money_date|safe }}
+                },
+
+                {
+                    name: '回款额',
+                    type: 'line',
+                    stack: '总量',
+                    areaStyle: {},
+
                     data:{{ six_receivable_date |safe }}
                 }
             ]
@@ -291,8 +258,6 @@
                         {value: {{ product_date_price_list.0 }}, name: '{{ product_date_name_list.0 }}'},
                         {value: {{ product_date_price_list.1 }}, name: '{{ product_date_name_list.1 }}'},
                         {value: {{ product_date_price_list.2 }}, name: '{{ product_date_name_list.2}}'},
-                        {value: {{ product_date_price_list.3}}, name: '{{ product_date_name_list.3 }}'},
-                        {value: {{ product_date_price_list.4}}, name: '{{ product_date_name_list.4 }}'}
                     ],
                     emphasis: {
                         itemStyle: {
@@ -352,15 +317,11 @@
             },
             dataset: {
                 source: [
-                    ['时间',
-                        {% for month in month_list %}
-                                '{{ month }}',
-                        {% endfor %}
-                    ],
-                    ['差旅费', 41.1, 30.4, 65.1, 53.3, 83.8, 98.7,],
-                    ['样品费', 86.5, 92.1, 85.7, 83.1, 73.4, 55.1],
-                    ['核销费', 24.1, 67.2, 79.5, 86.4, 65.2, 82.5],
-                    ['品鉴费', 55.2, 67.1, 69.2, 72.4, 53.9, 39.1]
+                    ['product', '一月', '二月', '三月', '四月', '五月', '六月'],
+                    ['Matcha Latte', 41.1, 30.4, 65.1, 53.3, 83.8, 98.7],
+                    ['Milk Tea', 86.5, 92.1, 85.7, 83.1, 73.4, 55.1],
+                    ['Cheese Cocoa', 24.1, 67.2, 79.5, 86.4, 65.2, 82.5],
+                    ['Walnut Brownie', 55.2, 67.1, 69.2, 72.4, 53.9, 39.1]
                 ]
             },
             xAxis: {type: 'category'},
@@ -377,12 +338,12 @@
                     radius: '30%',
                     center: ['50%', '25%'],
                     label: {
-                        formatter: '{b}: {@{{ month_list.5 }}} ({d}%)'
+                        formatter: '{b}: {@一月} ({d}%)'
                     },
                     encode: {
-                        itemName: '时间',
-                        value: '{{ month_list.5 }}',
-                        tooltip: '{{ month_list.5 }}'
+                        itemName: 'product',
+                        value: '一月',
+                        tooltip: '一月'
                     }
                 }
             ]
