--- a/templates/receivable_info.html
+++ b/templates/receivable_info.html
@@ -6,17 +6,17 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="../../../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="../../../static/lib/layui-v2.5.5/css/layui.css" media="all">
+    <script src="../static/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="../static/lib/layui-v2.5.5/css/layui.css" media="all">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../../static/css/bootstrap-table-expandable.css">
-    <script src="../../../static/js/bootstrap-table-expandable.js"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap-table-expandable.css">
+    <script src="../static/js/bootstrap-table-expandable.js"></script>
 </head>
 <body>
-<form action="/saleman_receivable_info/" method="post">
+<form action="/receivable_info/" method="post">
     <div class="demoTable">
         开始时间
         <label class="layui-inline">
@@ -31,14 +31,52 @@
         <label class="layui-inline">
             <input type="date" name="end_time" class="layui-input" autocomplete="off">
         </label>
+        &ensp;
+        &ensp;
+
+        &ensp;
+        &ensp;
+        客户名:
+        <label class="layui-inline">
+            <input type="text" name="customer" list="customers" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="customers" style="display:none; ">
+            {% for customer_name in all_customer_name %}
+                <option name='customer'>{{ customer_name.customer }}</option>
+            {% endfor %}
+        </datalist> &ensp;
+        &ensp;
+
+        &ensp;
+        &ensp;
+        业务员:
+        <label class="layui-inline">
+            <input type="text" name="saleman" list="salemans" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="salemans" style="display:none; ">
+            {% for saleman_name in all_saleman_name %}
+                <option name='saleman'>{{ saleman_name.saleman }}</option>
+            {% endfor %}
+        </datalist> &ensp;
+        &ensp;
+
+        &ensp;
+        &ensp;
+        区域:
+        <label class="layui-inline">
+            <input type="text" name="area" list="areas" class="layui-input">
+        </label>
+        <!-- 使用style="display:none;"将datalist元素设定为不显示 -->
+        <datalist id="areas" style="display:none; ">
+            {% for area_name in all_area_name %}
+                <option name='area'>{{ area_name.area }}</option>
+            {% endfor %}
+        </datalist>
         <button type="submit" class="layui-btn layui-btn-primary" lay-submit><i
                 class="layui-icon"></i> 搜 索
         </button>
-        <label class="layui-inline">
-            <input type="text" name="saleman" class="layui-input" autocomplete="off" value="{{ aii_info.0.saleman }}"
-                   style="width: 150px;height: 40px;margin-left:650%">
-        </label>
-
     </div>
 </form>
 <div>
@@ -58,16 +96,17 @@
                 , {field: 'date', title: '交易时间', minWidth: 150, sort: true}
                 , {field: 'bank', title: '交易行名', minWidth: 100}
                 , {field: 'banking_heads', title: '对方户名', minWidth: 250}
-                , {field: 'money', title: '收入金额', minWidth: 150, sort: true, totalRowText:{{sum_money}}}
+                , {field: 'money', title: '收入金额', minWidth: 150, sort: true, totalRowText: {{sum_receivable}}}
                 , {field: 'customer', title: '客户公司名', width: 250, templet: addLink}
                 , {field: 'area', title: '区域', minWidth: 100}
+                , {field: 'saleman', title: '业务员', minWidth: 100, templet: saleman_link}
                 , {field: 'remake', title: '备注', minWidth: 150}
                 , {field: 'earnest_money', title: '保证金额', minWidth: 150, sort: true}
-                , {field: 'push_money', title: '提成金额', minWidth: 150, sort: true,}
+                , {field: 'push_money', title: '提成金额', minWidth: 150, sort: true, }
                 , {field: 'right', title: '操作', toolbar: '#saleman_tool', width: 150}
             ]],
             data: [
-                {% for foo in aii_info %}
+                {% for foo in all_info %}
                     {
                         "id": "{{foo.id  }}"
                         , "date": "{{foo.date |date:'Y-m-d h:m:s' |safe }}"
@@ -75,6 +114,7 @@
                         , "banking_heads": "{{foo.banking_heads}}"
                         , "money": "{{foo.money}}"
                         , "customer": "{{ foo.customer }}"
+                        , "saleman": "{{ foo.saleman }}"
                         , "area": "{{ foo.area }}"
                         , "remake": "{{ foo.remake }}"
                         , "earnest_money": "{{ foo.earnest_money }}"
@@ -134,6 +174,16 @@
         }
         if (addLink.length > 0) {
             return "<a class='layui-table-link' href='/customer_welcome/?customer_name=" + d.customer + "' lay-event='link'>" + d.customer + '</a>';
+        }
+    }
+
+    function saleman_link(d) {
+        var addLink = d.saleman;
+        if ('' === addLink || null == addLink) {
+            return '';
+        }
+        if (addLink.length > 0) {
+            return "<a class='layui-table-link' href='/saleman_welcome/?saleman_name=" + d.saleman + "' lay-event='link'>" + d.saleman + '</a>';
         }
     }
 </script>
